# Scripts

FFgenome/01.assembly/BAC_pipe/: BAC_pipeline.pl
FFgenome/01.assembly/ObraVerifySeq/: fastaDeal.pl  getlargeseq.pl  parseembl.pl  parsegenbank.pl
FFgenome/01.assembly/assmbleview/: formatdb.sh  work.sh
FFgenome/01.assembly/correcttion/: work.sh
ProgramC/: umdhmm-v1.02.tar
ProgramC/awk/: awk.sh
ProgramC/cplus_basic/: list
ProgramC/gnuplot/gnuplot-4.4.0/term/: Makefile  Makefile.am  Makefile.in
ProgramC/hmm/: README.htm
ProgramC/libsequence/: FastaExplicit.cc  PolyTableIterators.cc  alignment  alignment.cc  convert  convert.cpp  critical_values.cc  ms.out  msfreq  msfreq.cpp  mstajima  mstajima.cpp  out.fa  pop.fa  revcom  revcom.cc  seedms  slidingWindow2.cc  slidingwin2  slidingwin2.cpp  tajima  tajima.cpp  test.aln  test.dnd  test.fa  test1.fa  test2.fa  translateTest  translateTest.cc  valid  valid.cc  valid_dna  valid_dna.cc  valid_dna1  valid_dna1.cc  work.sh
ProgramC/umdhmm-v1.02/: CHANGES  Makefile  README  THANKS  TODO  backward.c  baum.c  esthmm  esthmm.c  forward.c  genseq  genseq.c  hmm.h  hmmrand.c  hmmtut.ps  hmmutils.c  nrutil.c  nrutil.h  sequence.c  t2.100.seq  t2.1500.seq  t2.50.seq  t2.hmm  t3.hmm  test.hmm  test.seq  testfor  testfor.c  testvit  testvit.c  viterbi.c
ProgramPython/: Python.py  ci.py  decode.py  function.py
ProgramPython/Multiprocess/: mp_test.py  mp_worker_pool.py  mp_worker_queue.py
ProgramPython/Multithread/: test.py  test.sh  test.sh.o299437  write.py
ProgramPython/fasta/: ChrName.py  ChrName_MITEDigger.py  SplitFasta.py  SplitGFF3.py  cds.fasta  fasta.py
ProgramPython/gff/: gff.py
ProgramPython/heatmap/: TE_heatmap.py  sly1_strain.list
ProgramPython/module/: README  module2.py  test0.py  test1.py  test2.py  test3.py
ProgramPython/stat/: binominal.py  chisquare.py
Rscripts/: 3K_coreSNP-v2.1.pruneddata.tab.fasttree.nj.tree.Japonica.R  AdditionRelocaTEi.R  Draw.unalign.summary.R  HEG4_luluv2.CDS.uncover.overlap.missrate.4r.R  MSU7.random.5k.base.uncover.txt.gc.R  bar.R  coverage.curve.R  coverage.curve2.R  effect.R  indel_codon_len.length_indel_length.R  length.R  lengthclass1.R  mPing_Call_Correlation.R  mPing_intron_distance_boxplot.R  ping_number.R
Shell/: From_bam_to_local_assembly.sh  MergeBamAndSplitChr.sh  PBShead.sh  assemble_abi.sh  bam_downsample.sh  bedGraph2bigwig.sh  filter_index_bam.sh  find_grep_awk.sh  gz.sh  indexbam.sh  map.sh  map_bwa.sh  map_stampy.sh  md5.sh  mergeGFF.sh  mergebam.auto.sh  mergebam.sh  readgroup.sh  sed.sh  sort_indexbam.sh  splitbam.sh  sra2fastq.sh  trim.sh  unique.sh
(+846 files in other folders)
